feat: carousel added

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
 </head>
 
 <body>
-
-
-
+    <header class="container">
+        <h1 class="hero-text">Exploring Nature</h1>
+        <img class="mySlide" src="./assets/image1.jpg">
+        <img class="mySlide" src="./assets/image2.jpg">
+        <img class="mySlide" src="./assets/image3.jpg">
+        <img class="mySlide" src="./assets/image4.jpg">
+    </header>
     <script src="main.js"></script>
 </body>
 
