--- a/index.html
+++ b/index.html
@@ -15,8 +15,24 @@
         <img class="mySlide" src="./assets/image1.jpg">
         <img class="mySlide" src="./assets/image2.jpg">
         <img class="mySlide" src="./assets/image3.jpg">
-        <img class="mySlide" src="./assets/image4.jpg">
     </header>
+
+    <div class="block">
+        <img src="./assets/c1.jpg" data-speed="1" class="img-parallax" width="1000px">
+        <h2>Parallax Text</h2>
+    </div>
+    <div class="block">
+        <img src="./assets/c2.jpg" data-speed="-0.25" class="img-parallax">
+        <h2>Parallax Speed -0.25</h2>
+    </div>
+    <div class="block">
+        <img src="./assets/c3.jpg" data-speed="0.25" class="img-parallax">
+        <h2>Parallax Speed 0.25</h2>
+    </div>
+    <div class="block">
+        <img src="./assets/c4.jpg" data-speed="-0.75" class="img-parallax">
+        <h2>Parallax Speed -0.75</h2>
+    </div>
     <script src="main.js"></script>
 </body>
 
