--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <!-- <header class="container">
+    <header class="container">
         <h1 class="hero-text">Exploring Nature</h1>
         <img class="mySlide" src="./assets/image1.jpg">
         <img class="mySlide" src="./assets/image2.jpg">
@@ -26,27 +26,8 @@
     <section class="image-container">
         <img class="thumbnail" src="./assets/c3.jpg" width="800px" height="600px" alt="image">
         <img class="thumbnail" src="./assets/c4.jpg" width="800px" height="600px" alt="image">
-    </section> -->
-
-    <section>
-        <div class="block">
-            <img src="./assets/image1.jpg" data-speed="-1" class="img-parallax">
-            <h2>Parallax background</h2>
-        </div>
-        <div class="block">
-            <img src="./assets/image2.jpg" data-speed="1" class="img-parallax">
-            <h2>Parallax foreground</h2>
-        </div>
-
-        <div class="block">
-            <img src="./assets/image1.jpg" data-speed="-1" class="img-parallax">
-            <h2>Parallax background</h2>
-        </div>
-        <div class="block">
-            <img src="./assets/image2.jpg" data-speed="1" class="img-parallax">
-            <h2>Parallax foreground</h2>
-        </div>
     </section>
+
     <script src="main.js"></script>
 </body>
 
